--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime-corejs3": "^7.12.5",
     "@iro/interaction": "^1.2.6",
     "@iro/wechat-adapter": "^0.1.4",
     "@pixi/unsafe-eval": "^5.2.1",
